# attack-framework

./: CMakeLists.txt
cmake/Modules/: DetectPlatform.cmake  UseJava.cmake
designs/aes_iterative/: Makefile
designs/aes_iterative/rtl/: aes_add_round_key.sv  aes_dual_row_mem.sv  aes_encrypt_control.sv  aes_encrypt_unit.sv  aes_encrypt_unit_m.sv  aes_key_mem.sv  aes_mix_columns.sv  aes_read_mux.sv  aes_sbox_logic.sv  aes_sbox_lut.sv  aes_sub_bytes.sv  aes_write_mux.sv
designs/aes_iterative/scr/: dc_commands_encrypt_unit.tcl  dc_commands_encrypt_unit_m.tcl  modelsim.do  power.script  power_piped.script  pt_commands_encrypt_unit.tcl  pt_commands_encrypt_unit_m.tcl  ptx_encrypt_unit_m.script  simv_encrypt_unit.do  synth.script  synth_encrypt_unit.script  vsim_commands_encrypt_unit.tcl  vsim_commands_encrypt_unit_m.tcl  vsim_encrypt_unit_m.do
designs/aes_iterative/tb/: test_encrypt_unit.sv  test_encrypt_unit_m.sv  testbench.sv
designs/grostl_dp512/: Makefile
designs/grostl_dp512/rtl/: grostl_add_constant.sv  grostl_add_constant_p.sv  grostl_add_constant_q.sv  grostl_compress_parallel.sv  grostl_compress_serial.sv  grostl_compress_serial_m.sv  grostl_control.sv  grostl_mix_bytes.sv  grostl_shift_bytes.sv  grostl_shift_bytes_p.sv  grostl_shift_bytes_q.sv  grostl_sub_bytes.sv  grostl_sub_bytes_m.sv
designs/grostl_dp512/scr/: dc_commands_compress_serial.tcl  dc_commands_compress_serial_m.tcl  dc_commands_hmac_serial.tcl  dc_commands_hmac_serial_m.tcl  pt_commands_compress_serial.tcl  pt_commands_hmac_serial_m.tcl  ptx_compress_serial_m.script  synth_compress_serial.script  synth_compress_serial_m.script  vsim_commands_compress_parallel.tcl  vsim_commands_compress_serial.tcl  vsim_commands_compress_serial_m.tcl  vsim_commands_hmac_serial.tcl  vsim_commands_hmac_serial_m.tcl  vsim_compress_parallel.do  vsim_compress_serial.do  vsim_hmac_serial_m.do
designs/grostl_dp512/tb/: test_compress_parallel.sv  test_compress_serial.sv  test_compress_serial_m.sv  test_hmac_serial.sv  test_hmac_serial_m.sv
designs/grostl_dp64/: Makefile
designs/grostl_dp64/lib/: grostl_unit.sdc
designs/grostl_dp64/rtl/: grostl_add_constant.sv  grostl_compress_serial.sv  grostl_compress_serial_m.sv  grostl_mix_bytes.sv  grostl_sbox_lut.sv  grostl_shift_bytes.sv  grostl_sub_bytes.sv  grostl_sub_bytes_m.sv
designs/grostl_dp64/scr/: dc_commands_compress_serial.tcl  dc_commands_compress_serial_m.tcl  dc_commands_hmac_serial.tcl  dc_commands_hmac_serial_m.tcl  pt_commands_compress_serial.tcl  pt_commands_compress_serial_m.tcl  pt_commands_hmac_serial.tcl  ptx_hmac_serial.script  ptx_hmac_serial_m.script  vsim_commands_compress_serial.tcl  vsim_commands_compress_serial_m.tcl  vsim_commands_hmac_serial.tcl  vsim_commands_hmac_serial_m.tcl  vsim_compress_serial.do  vsim_compress_serial_m.do  vsim_hmac_serial.do
designs/grostl_dp64/tb/: test_compress_serial.sv  test_compress_serial_m.sv  test_hmac_serial.sv  test_hmac_serial_m.sv
designs/rijndael_sbox/: Makefile  modelsim.ini
designs/rijndael_sbox/rtl/: rijndael_sbox_lut.sv  rijndael_sbox_masked.sv  rijndael_simple_func.sv  rijndael_simple_func_m.sv
designs/rijndael_sbox/scr/: dc_commands_simple_func.tcl  dc_commands_simple_func_m.tcl  pt_commands_simple_func.tcl  pt_commands_simple_func_m.tcl  ptx_simple_func.script  ptx_simple_func_m.script  synth_simple_func.script  synth_simple_func_m.script  vsim_commands_simple_func.tcl  vsim_commands_simple_func_m.tcl  vsim_simple_func.do
designs/rijndael_sbox/tb/: test_simple_func.sv  test_simple_func_m.sv
scripts/: collect.py  graph.py  simulate.py  speedup.py
src/: CMakeLists.txt
src/common/: CMakeLists.txt  aes.cpp  aes.h  agilent_reader.cpp  agilent_reader.h  attack_cpa.cpp  attack_dpa.cpp  attack_engine.cpp  attack_engine.h  attack_manager.cpp  attack_manager.h  attack_pscc.cpp  attack_relpow.cpp  attack_thread.cpp  attack_thread.h  cmdline.cpp  cmdline.h  config.h.cmake  crypto.h  crypto_aes_hd_r0.cpp  crypto_aes_hd_r10.cpp  crypto_aes_hw_r0.cpp  crypto_aes_hw_r10.cpp  crypto_des_hd_r0.cpp  crypto_grostl_dp512_hd_r0.cpp  crypto_grostl_dp64_hd_r0.cpp  des.cpp  des.h  grostl.cpp  grostl.h  trace.cpp  trace.h  trace_format.cpp  trace_format.h  trace_format_csv.cpp  trace_format_out.cpp  trace_format_out.h  trace_format_packed.cpp  trace_format_packed.h  trace_format_simv.cpp  (+11 more)
src/reference/: CMakeLists.txt
src/reference/dpacontest_v2/: CMakeLists.txt  attack_last_round.cpp  attack_wrapper.c  config.h  trace_files.c  trace_files.h
src/reference/ken_attack/: CMakeLists.txt  RandomFileOrderGenerator.java  ResultsParser.java  Serialized_to_ASCII.java  Simulation_Attack.java  TimingProfiler.java  Trace.java  TraceShrinker.java  manifest.txt
src/tests/: CMakeLists.txt  aes_test_vectors.cpp  grostl_test_vectors.cpp  sample_and_hold.cpp
src/tools/: CMakeLists.txt  aestool.cpp  agilent2bin.cpp  attack.cpp  bin2csv.cpp  bin2db.cpp  comp2bin.cpp  convert.cpp  destool.cpp  gentraces.cpp  grostltool.cpp  out2bin.cpp  profile.cpp  sboxtool.cpp
