# -----------------------------------------------------------------------------
# Author:  Garrett Smith
# File:    CMakeLists.cmake
# Created: 10/03/2011
# -----------------------------------------------------------------------------

# add_subdirectory(dpacontest_v1)
add_subdirectory(dpacontest_v2)
add_subdirectory(ken_attack)

